Restructe and update